[gd_scene load_steps=3 format=3 uid="uid://b2wpshvikyg7k"]

[ext_resource type="Script" uid="uid://c44b5v7goddip" path="res://components/hurtbox_component.gd" id="1_mjwml"]
[ext_resource type="AudioStream" uid="uid://byudcml5w3sgk" path="res://assets/sounds/hurt.wav" id="2_8jj4i"]

[node name="Hurtbox" type="Area2D"]
script = ExtResource("1_mjwml")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8jj4i")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
